--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "src/assets/css/charts.css",
               "src/assets/css/dataTables.bootstrap4.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/ngx-spinner/animations/square-jelly-box.css"
+              "node_modules/ngx-spinner/animations/square-jelly-box.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
