--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@sweetalert2/ngx-sweetalert2": "^12.0.1",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.0",
     "font-awesome": "^4.7.0",
@@ -26,6 +27,7 @@
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
