--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@angular/compiler": "^14.0.0-next.0",
     "@angular/core": "^14.0.0-next.0",
     "@angular/forms": "^14.0.0-next.0",
+    "@angular/localize": "^14.0.0-next.0",
     "@angular/platform-browser": "^14.0.0-next.0",
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.11.6",
     "@sweetalert2/ngx-sweetalert2": "^12.0.1",
     "angular-animations": "^0.11.0",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "ngx-pagination": "^6.0.3",
