--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
+    "ng-apexcharts": "^1.7.4",
+    "ng-recaptcha": "^9.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.0.0",
